@@ -1,3 +1,3 @@
-MD5 d83d86b6c229b277ac1962ed9c0373aa util-macros-0.99.0.ebuild 419
-MD5 de131993f6fe44c54c9494238fe7f6bc ChangeLog 368
+MD5 737a928155e94d16e64873c85bf1d826 util-macros-0.99.0.ebuild 407
+MD5 8499a54aae45b453647e794465b716ec ChangeLog 506
 MD5 dde7a1d6783de856b2070cfa418b0702 files/digest-util-macros-0.99.0 70
