@@ -1,14 +1,13 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/util-macros/util-macros-0.99.0.ebuild,v 1.1 2005/08/08 03:20:31 spyderous Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/util-macros/util-macros-0.99.0.ebuild,v 1.2 2005/08/08 03:22:49 spyderous Exp $
 
 # Must be before x-modular eclass is inherited
 #SNAPSHOT="yes"
 
 inherit x-modular
 
-DESCRIPTION="X.Org makedepend utility"
+DESCRIPTION="X.Org autotools utility macros"
 KEYWORDS="~x86"
 RDEPEND=""
-DEPEND="${RDEPEND}
-	x11-proto/xproto"
+DEPEND="${RDEPEND}"
